# Veilweaver-Threads-of-Eternity

./: .gitignore  404.html  CI_FIXES.md  CONTRIBUTING.md  Cargo-workspace.toml  Cargo.toml  DEPENDENCY_FIXES_REPORT.md  DEVELOPMENT_SETUP.md  EXECUTIVE_SUMMARY.md  GRAPHICS_FIXES_SUMMARY.md  LICENSE  Makefile  ONE_PAGE_OVERVIEW.md  PITCH_DECK.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SECURITY_ASSESSMENT.md  STRATEGIC_DOCS.md  TEXTURE_PACK_SYSTEM.md  UNIFIED_SHOWCASE_IMPLEMENTATION.md  UNIFIED_SHOWCASE_TEXTURE_FIX.md  author-example.rhai  aw_pipeline.toml  deny.toml  index.html  output.txt  persona-manifest.toml  print.html  roadmap.md  rust-toolchain.toml  searchindex.js  test_benchmark_extract.sh  toc.html  toc.js
.cargo/: config.toml
.github/: CI_README.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+2 more)
AI Engine/: AstraWeave.md
Console/: AstraCore.md
Game/: AI First Concept.md  First concept(no AI).md  Veilweaver.md
api/: help.html  index.html  search-index.js  settings.html  src-files.js
architecture/: ai-native.html  deterministic.html  ecs.html  overview.html  tool-validation.html
assets/: README.md  dialogue_audio_map.toml  dialogue_intro.toml  dirt.ktx2  echoes.toml  manifest.json  quests_main.toml  recipes.toml  voices.toml
astraweave-ai/: Cargo.toml
astraweave-audio/: Cargo.toml
astraweave-audio/src/: dialogue_runtime.rs  engine.rs  lib.rs  voice.rs
astraweave-author/: Cargo.toml
astraweave-core/: Cargo.toml
astraweave-core/benches/: core_benchmarks.rs
astraweave-core/src/: lib.rs  perception.rs  schema.rs  sim.rs  tools.rs  util.rs  validation.rs  world.rs
astraweave-director/: Cargo.toml
astraweave-gameplay/: Cargo.toml
astraweave-gameplay/src/: biome.rs  biome_spawn.rs  combat.rs  combat_physics.rs  crafting.rs  cutscenes.rs  dialogue.rs  harvesting.rs  items.rs  lib.rs  quests.rs  stats.rs  types.rs  weave_portals.rs  weave_telemetry.rs  weaving.rs
astraweave-input/: Cargo.toml
astraweave-input/benches/: input_benchmarks.rs
astraweave-input/src/: actions.rs  bindings.rs  lib.rs  manager.rs  save.rs
astraweave-ipc/: Cargo.toml
astraweave-llm/: Cargo.toml  README.md
astraweave-llm/src/: lib.rs
astraweave-llm/tests/: integration_test.rs
astraweave-memory/: Cargo.toml
astraweave-nav/: Cargo.toml  lib.rs
astraweave-net/: Cargo.toml
astraweave-net/src/: lib.rs
astraweave-npc/: Cargo.toml
astraweave-npc/src/: behavior.rs  lib.rs  llm.rs  profile.rs  runtime.rs  sense.rs
astraweave-persona/: Cargo.toml
astraweave-physics/: Cargo.toml
astraweave-render/: Cargo.toml
astraweave-render/src/: camera.rs  depth.rs  effects.rs  lib.rs  overlay.rs  primitives.rs  renderer.rs  texture.rs  types.rs
astraweave-sdk/: Cargo.toml
astraweave-ui/: Cargo.toml
astraweave-ui/src/: layer.rs  lib.rs  panels.rs  state.rs
astroweave-render/: Cargo.toml
core-systems/: audio.html  input.html  navigation.html  networking.html  physics.html  rendering.html
dev/: building.html  code-style.html  contributing.html  new-features.html  performance.html  testing.html
docs/: BENCHMARKING_GUIDE.md  BUILD_QUICK_REFERENCE.md  README.md  RUST_TOOLCHAIN_GUIDE.md  SECURITY_AUDIT_GUIDE.md  ai-scripting.md  authoring-tools.md  book.toml  build-and-packaging.md  build-optimization.md  engine-api.md  networking.md  overview.md  persona-packs.md
examples/: adaptive-boss.html  audio-spatial.html  hello-companion.html  index.html  navmesh-demo.html  physics-demo.html  troubleshooting.html
examples/audio_spatial_demo/: Cargo.toml
examples/audio_spatial_demo/src/: main.rs
examples/combat_physics_demo/: Cargo.toml
examples/combat_physics_demo/src/: main.rs
examples/coop_client/: Cargo.toml
examples/coop_client/src/: main.rs
examples/cutscene_render_demo/: Cargo.toml
examples/cutscene_render_demo/src/: main.rs
examples/debug_toolkit_demo/: Cargo.toml  README.md
examples/debug_toolkit_demo/src/: main.rs
examples/ipc_loopback/: Cargo.toml
examples/ipc_loopback/src/: main.rs
examples/llm_integration/: Cargo.toml
examples/llm_integration/src/: main.rs
examples/navmesh_demo/: Cargo.toml
examples/navmesh_demo/src/: main.rs
examples/npc_town_demo/: Cargo.toml
examples/npc_town_demo/src/: main.rs
examples/save_integration/: Cargo.toml
examples/save_integration/src/: main.rs
examples/ui_controls_demo/: Cargo.toml
examples/ui_controls_demo/src/: main.rs
examples/unified_showcase/: Cargo.toml  README.md
examples/unified_showcase/src/: main.rs  texture_synth.rs
examples/visual_3d/: Cargo.toml
examples/visual_3d/src/: main.rs
examples/weaving_playground/: Cargo.toml
examples/weaving_playground/src/: main.rs
game-dev/: bosses.html  companions.html  crafting-combat.html  dialogue.html  first-game.html  procedural.html
getting-started/: first-companion.html  installation.html  quick-start.html  requirements.html
net/: README.md
net/aw-net-client/: Cargo.toml
net/aw-net-client/src/: main.rs
net/aw-net-proto/: Cargo.toml
net/aw-net-proto/src/: lib.rs
net/aw-net-server/: Cargo.toml
net/aw-net-server/src/: main.rs
npc_town_demo/: Cargo.toml
persistence/aw-save/: Cargo.toml  README.md
persistence/aw-save/src/: lib.rs
persistence/aw-save/tests/: integration_test.rs  migration_test.rs
reference/: cli-tools.html  configuration.html  crates.html  platforms.html
resources/: best-practices.html  community.html  faq.html  patterns.html  performance.html  roadmap.html  troubleshooting.html
scripts/: bootstrap.sh  dev.sh
test_benchmark_results/: benchmarks.json
test_benchmark_results_2/: benchmarks.json  summary.txt
test_benchmark_results_final/: benchmarks.json  summary.txt
test_results/: benchmarks.json  summary.txt
tools/: README.md
tools/aw_asset_cli/: Cargo.toml  README.md
tools/aw_asset_cli/src/: main.rs
tools/aw_build/: Cargo.toml
tools/aw_build/benches/: hash_perf.rs
tools/aw_build/src/: main.rs
veilweaver/: ai-integration.html  mechanics.html  overview.html  world-design.html
(+313 files in other folders)
