[workspace]
members = [
  "astraweave-core",
  "astraweave-ai",
  "astraweave-sdk",
  "astraweave-director",
  "astraweave-memory",
  "astraweave-ipc",
  "astraweave-llm",       
  "astraweave-persona",   
  "astraweave-author",    
  "astraweave-net",       
  "examples/hello_companion",
  "examples/adaptive_boss",
  "examples/companion_profile",
  "examples/ipc_loopback",
  "examples/debug_overlay",
  "examples/llm_toolcall",    
  "examples/phase_director",  
  "examples/persona_loader",  
  "examples/rhai_authoring",  
  "examples/coop_server",     
  "examples/coop_client",    
  "astraweave-render",
  "examples/visual_3d",
  "astraweave-physics",
  "astraweave-nav",
  "examples/physics_demo3d",
  "examples/navmesh_demo",
  "astraweave-gameplay",
  "examples/weaving_playground",
  "examples/crafting_combat_demo",
  "examples/quest_dialogue_demo",
  "examples/combat_physics_demo",
  "examples/cutscene_render_demo",
  "astraweave-audio",
  "examples/audio_spatial_demo",
  "examples/dialogue_voice_demo",
  "astraweave-npc",
  "examples/npc_town_demo",
  "astraweave-input",
  "astraweave-ui",
  "examples/ui_controls_demo",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "0.6"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
rhai = "1.17"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tungstenite = "0.21"
tokio-tungstenite = "0.21"
egui = "0.28"
eframe = { version = "0.28", default-features = true, features = ["wgpu"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] } # for optional Ollama client
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.27"
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.27"
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
rapier3d = "0.22"   # adjust if your toolchain prefers a specific minor
rand = "0.8"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
glam = "0.27"
wgpu = "0.19"
winit = "0.29"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2.4"
rodio = "0.17"
# UI + gamepad
egui = "0.27"
egui_winit = "0.27"
egui_wgpu = "0.27"
gilrs = "0.10"         # gamepad (Linux/Windows/macOS); optional on unsupported platforms
