[workspace]
members = [
  "astraweave-core",
  "astraweave-ai",
  "astraweave-sdk",
  "astraweave-director",
  "astraweave-memory",
  "astraweave-ipc",
  "astraweave-llm",       
  "astraweave-persona",   
  "astraweave-author",    
  "astraweave-net",       
  "examples/hello_companion",
  "examples/adaptive_boss",
  "examples/companion_profile",
  "examples/ipc_loopback",
  "examples/debug_overlay",
  "examples/llm_toolcall",    
  "examples/phase_director",  
  "examples/persona_loader",  
  "examples/rhai_authoring",  
  "examples/coop_server",     
  "examples/coop_client",    
  "astraweave-render",
  "examples/visual_3d",
  "astraweave-physics",
  "astraweave-nav",
  "examples/physics_demo3d",
  "examples/navmesh_demo",
  "astraweave-gameplay",
  "examples/weaving_playground",
  "examples/crafting_combat_demo",
  "examples/quest_dialogue_demo",
  "examples/combat_physics_demo",
  "examples/cutscene_render_demo",
  "astraweave-audio",
  "examples/audio_spatial_demo",
  "examples/dialogue_voice_demo",
  "astraweave-npc",
  "examples/npc_town_demo",
  "astraweave-input",
  "astraweave-ui",
  "examples/ui_controls_demo",
]
resolver = "2"

# Exclude crates with known compilation issues from workspace operations
[workspace.metadata.ci-excludes]
# These crates are excluded from CI builds due to known issues:
# - astraweave-author: rhai sync/send trait issues
# - visual_3d: egui/winit API mismatches  
# - ui_controls_demo: egui API changes
# - npc_town_demo: API mismatches
# - rhai_authoring: depends on broken astraweave-author
# - cutscene_render_demo: missing cutscene module, API mismatches
# - weaving_playground: API mismatches with renderer and physics
# - combat_physics_demo: missing combat_physics module
# - navmesh_demo: renderer API mismatch
# - physics_demo3d: clippy error with PI constant
problematic = [
  "astraweave-author",
  "visual_3d", 
  "ui_controls_demo",
  "npc_town_demo",
  "rhai_authoring",
  "cutscene_render_demo",
  "weaving_playground",
  "combat_physics_demo",
  "navmesh_demo",
  "physics_demo3d"
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "0.6"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
rhai = "1.22"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tungstenite = "0.21"
tokio-tungstenite = "0.21"
egui = "0.28"
eframe = { version = "0.28", default-features = true, features = ["wgpu"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["serde"] }
wgpu = "0.20"
winit = { version = "0.29", features = ["serde"] }
pollster = "0.3"
rapier3d = "0.22"
bitflags = "2.4"
rodio = "0.17"
egui-winit = "0.28"
egui-wgpu = "0.28"
gilrs = "0.10"
criterion = "0.5"
