[workspace]
members = [
  "astraweave-core",
  "astraweave-ai",
  "astraweave-sdk",
  "astraweave-director",
  "astraweave-memory",
  "astraweave-ipc",
  "astraweave-llm",       
  "astraweave-persona",   
  "astraweave-author",    
  "astraweave-net",       
  "examples/hello_companion",
  "examples/adaptive_boss",
  "examples/companion_profile",
  "examples/ipc_loopback",
  "examples/debug_overlay",
  "examples/llm_toolcall",    
  "examples/llm_integration",    
  "examples/phase_director",  
  "examples/persona_loader",  
  "examples/rhai_authoring",  
  "examples/coop_server",     
  "examples/coop_client",    
  "astraweave-render",
  "examples/visual_3d",
  "astraweave-physics",
  "astraweave-nav",
  "examples/physics_demo3d",
  "examples/navmesh_demo",
  "astraweave-gameplay",
  "examples/weaving_playground",
  "examples/crafting_combat_demo",
  "examples/quest_dialogue_demo",
  "examples/combat_physics_demo",
  "examples/cutscene_render_demo",
  "astraweave-audio",
  "examples/audio_spatial_demo",
  "examples/dialogue_voice_demo",
  "astraweave-npc",
  "examples/npc_town_demo",
  "astraweave-input",
  "astraweave-ui",
  "examples/ui_controls_demo",
  "examples/debug_toolkit_demo",
  "examples/save_integration",
  "examples/unified_showcase",
  # New tooling crates
  "tools/aw_editor",
  "tools/aw_asset_cli",
  "tools/aw_debug",
  "tools/aw_build",
  # persistence
  "persistence/aw-save",
  "tools/aw_save_cli",
  # Enhanced networking layer
  "net/aw-net-proto",
  "net/aw-net-server",
  "net/aw-net-client",
]
resolver = "2"

# Exclude crates with known compilation issues from workspace operations
[workspace.metadata.ci-excludes]
# These crates had compilation issues that have now been fixed:
# - All previously problematic crates now compile successfully
# - Only some crates still have warnings but no compilation errors
problematic = [
  # All crates now work! Keeping this section for documentation purposes.
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.89.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "0.6"
rand = "0.9"
sha2 = "0.10"
hex = "0.4"
rhai = "1.22"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tungstenite = "0.21"
tokio-tungstenite = "0.21"
egui = "0.28"
eframe = { version = "0.28", default-features = true, features = ["wgpu"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
bytemuck = { version = "1", features = ["derive"] }
glam = { version = "0.30", features = ["serde"] }
wgpu = "0.20"
winit = { version = "0.29", features = ["serde"] }
pollster = "0.3"
rapier3d = "0.22"
bitflags = "2.4"
rodio = "0.17"
egui-winit = "0.28"
egui-wgpu = "0.28"
gilrs = "0.10"
criterion = "0.5"
