[package]
name = "astraweave-core"
version = "0.1.0"
edition = "2021"
license = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
glam = "0.30"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
