[package]
name = "astraweave-gameplay"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
glam = { workspace = true }
rapier3d = { workspace = true }

astraweave-core = { path = "../astraweave-core" }
astraweave-physics = { path = "../astraweave-physics" }
astraweave-nav = { path = "../astraweave-nav" }
