[package]
name = "astraweave-input"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
gilrs = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "input_benchmarks"
harness = false
