[package]
name = "astraweave-llm"
version = "0.1.0"
edition = "2021"

[features]
ollama = []

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
astraweave-core = { path = "../astraweave-core" }
async-trait = "0.1"
