[package]
name = "astraweave-net"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
tungstenite = { workspace = true }
tokio-tungstenite = { workspace = true }
astraweave-core = { path = "../astraweave-core" }
