[package]
name = "astraweave-render"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
rand = { workspace = true }
image = { version = "0.25", optional = true }

[features]
default = ["textures"]
textures = ["image"]
