[package]
name = "astraweave-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

astraweave-input = { path = "../astraweave-input" }
astraweave-gameplay = { path = "../astraweave-gameplay" }
