[package]
name = "audio_spatial_demo"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
winit = { workspace = true }
glam  = { workspace = true }
pollster = { workspace = true }
astraweave-render = { path = "../../astraweave-render" }
astraweave-audio  = { path = "../../astraweave-audio" }
