[package]
name = "ipc_loopback"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
astraweave-core = { path = "../../astraweave-core" }
astraweave-ipc = { path = "../../astraweave-ipc" }
