[package]
name = "navmesh_demo"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
winit = { workspace = true }
wgpu  = { workspace = true }
glam  = { workspace = true }
pollster = { workspace = true }
astraweave-render = { path = "../../astraweave-render" }
astraweave-nav = { path = "../../astraweave-nav" }
