[package]
name = "save_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde-human-readable"] }
bincode = "1"

# AstraWeave dependencies  
astraweave-core = { path = "../../astraweave-core" }
aw-save = { path = "../../persistence/aw-save" }