[package]
name = "ui_controls_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
winit = { workspace = true }
wgpu  = { workspace = true }
glam  = { workspace = true }
pollster = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }

astraweave-render   = { path = "../../astraweave-render" }
astraweave-input    = { path = "../../astraweave-input" }
astraweave-ui       = { path = "../../astraweave-ui" }
astraweave-physics  = { path = "../../astraweave-physics" }
astraweave-gameplay = { path = "../../astraweave-gameplay" }
