[package]
name = "visual_3d"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
astraweave-core = { path = "../../astraweave-core" }
astraweave-render = { path = "../../astraweave-render" }
