[package]
name = "visual_3d"
version = "0.1.0"
license.workspace = true
edition = "2021"

[features]
default = ["textures"]
textures = ["astraweave-render/textures"]

[dependencies]
anyhow = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
image = "0.25"
astraweave-core = { path = "../../astraweave-core" }
astraweave-render = { path = "../../astraweave-render" }
