[package]
name = "aw-net-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.23"
tungstenite = "0.21"
url = "2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
lz4_flex = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
aw-net-proto = { path = "../aw-net-proto" }