[package]
name = "aw-net-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
axum = "0.7"
hyper = { version = "1", features = ["http1", "server"] }
tokio-tungstenite = "0.23"
tungstenite = "0.21"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["macros"] }
sled = "0.34"
postcard = { version = "1", features = ["alloc"] }
lz4_flex = "0.11"
aw-net-proto = { path = "../aw-net-proto" }