[package]
name = "aw_asset_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
sha2 = { workspace = true }
hex = { workspace = true }
which = "6"
glob = "0.3"
gltf = "1"
image = "0.25"