[package]
name = "aw_build"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AstraWeave packager: bundle releases, build manifests, and create binary patches."

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
rayon = "1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
time = { version = "0.3", features = ["formatting","macros"] }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "hash_perf"
harness = false